--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/adhe223/Javascript-Practice/issues"
   },
-  "homepage": "https://github.com/adhe223/Javascript-Practice#readme"
+  "homepage": "https://github.com/adhe223/Javascript-Practice#readme",
+  "devDependencies": {
+    "jasmine": "^2.5.3"
+  }
 }
