Better than nlogn sort if given a max value

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine-node-karma spec/"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/adhe223/Javascript-Practice#readme",
   "devDependencies": {
-    "jasmine": "^2.5.3"
+    "browserify": "^14.1.0",
+    "karma": "^1.5.0",
+    "karma-browserify": "^5.1.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "watchify": "^3.9.0"
   }
 }
