--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/adhe223/Javascript-Practice#readme",
   "devDependencies": {
+    "babelify": "^7.3.0",
     "browserify": "^14.1.0",
+    "gulp": "^3.9.1",
+    "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
     "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
