--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine-node-karma spec/"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
